piccole modifiche API